kubernetes/todo-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  todo-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      volumes:
        - name: ca-certs
          configMap:
            name: custom-ca-certs
      containers:
        - name: todo-service
          image: suhail12/graphql-todo-service:stable-latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ca-certs
              mountPath: /etc/ssl/certs
