kubernetes/auth-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: auth-service  
  namespace: myapplication
spec:
  selector:
    app: auth-service
  ports:
  - name: auth-service
    protocol: TCP
    port: 80
    targetPort: 3000
---
